fix slick dots on mobile

--- a/editor-gutenberg-style.css
+++ b/editor-gutenberg-style.css
@@ -2488,11 +2488,12 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
           right: 75px; } }
     .page-template-page_full-width .wp-block-group.alignfull.home-landing-top .slider .slick-dots {
       z-index: 2;
-      bottom: -2px;
+      bottom: 30px;
       left: 20px; }
       @media (min-width: 768px) {
         .page-template-page_full-width .wp-block-group.alignfull.home-landing-top .slider .slick-dots {
-          left: 45px; } }
+          left: 45px;
+          bottom: -2px; } }
       .page-template-page_full-width .wp-block-group.alignfull.home-landing-top .slider .slick-dots li button::before {
         color: #fff;
         opacity: 0.6;
